# DrawStar

./: CMakeCache.txt  CMakeLists.txt  README.md  Star.cpp  Star.hpp  cmake_install.cmake  main.out  mainstar.cpp  star_url.txt
